--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "deploy": "^1.0.3",
     "firebase": "^7.24.0",
     "fuse.js": "^6.4.2",
+    "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.0",
