--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "netflix",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Mostafa-Ragab.github.io/netflix",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "deploy": "^1.0.3",
     "firebase": "^7.24.0",
+    "firebase-tools": "^9.16.0",
     "fuse.js": "^6.4.2",
     "gh-pages": "^3.2.3",
     "node-sass": "^5.0.0",
